--- a/components/project/style.css
+++ b/components/project/style.css
@@ -1,5 +1,6 @@
 .project{
   position: absolute;
+  z-index: 0;
   transition: opacity 350ms;
   top:5%;
   left: 5%;
